samples/_failures_safe/1761509265_7a43db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b00b2c1c.c: In function ‘main’:
./samples/SAFE/__tmp_b00b2c1c.c:162:5: error: expected declaration or statement at end of input
  162 |     size_t token_count = 0;
      |     ^~~~~~
